--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -37,6 +37,17 @@ $testC: #e74c3c;
   }
 }
 
+input[type=text] {
+  border-style: none;
+}
+
+%input {
+  box-shadow: 0px 0px 30px -3px #d8d8d8;
+  padding: 12px;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
 .no-spinners {
 	-webkit-appearance: none;
 	-moz-appearance: textfield;
