--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -35,6 +35,7 @@ $testC: #e74c3c;
   &:hover {
     cursor: pointer;
   }
+  font-family: $ff;
 }
 
 input[type=text] {
@@ -42,11 +43,16 @@ input[type=text] {
 }
 
 %input {
+  font-family: $ff;
   box-shadow: 0px 0px 30px -3px #d8d8d8;
-  padding: 12px;
+  padding: 10px;
   font-size: 14px;
   border-radius: 4px;
 }
+
+// label {
+//   margin: 4px 0;
+// }
 
 .no-spinners {
 	-webkit-appearance: none;
