--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -31,6 +31,10 @@ $ff: 'Segoe UI';
 $fs: 14px;
 $fss: 14px;
 
+$purple: #a57bec;
+
+$baseShadow: 0px 0px 60px -3px rgba(212, 214, 242, .6);
+
 $icoUrl: './../assets/img/icons/';
 
 $testC: #e74c3c;
