--- a/src/assets/css/classes.scss
+++ b/src/assets/css/classes.scss
@@ -1,3 +1,6 @@
+$ff: 'Segoe UI';
+$purple: #a57bec;
+
 .box {
   padding: 30px;
   background-color: #fff;
@@ -21,4 +24,29 @@
   padding: 16px;
   box-sizing: border-box;
   color: #fff;
+}
+
+.add-btn {
+  background-color: #fff;
+  padding: 13px;
+  padding-right: 30px;
+  box-shadow: 0px 0px 60px 3px rgba(212,214,242,1);
+  border-radius: 6px;
+  position: relative;
+  outline: none;
+  display: block;
+  margin: 30px auto;
+  &::after {
+    content: "+";
+    font-family: $ff;
+    position: absolute;
+    padding: 15px;
+    top: calc(50% - 24.5px);
+    right: -25px;
+    color: #fff;
+    background-color: $purple;
+    border-radius: 30px;
+    width: 49px;
+    box-sizing: border-box;
+  }
 }
